# searchfox-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  pyproject.toml
.claude/: settings.local.json
.claude/skills/: release.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
python/: README.md
python/examples/: README.md  code_analyzer.py  demo.py
python/searchfox/: __init__.py
scripts/: install-hooks.sh
searchfox-cli/: Cargo.toml
searchfox-cli/src/: config.rs  main.rs
searchfox-lib/: Cargo.toml
searchfox-lib/src/: blame.rs  cache.rs  call_graph.rs  can_gc.rs  client.rs  definition.rs  field_layout.rs  file_reader.rs  lib.rs  nesting.rs  search.rs  spec_refs.rs  types.rs  utils.rs
searchfox-lib/tests/: integration.rs
searchfox-py/: Cargo.toml
searchfox-py/src/: lib.rs
src/: main.rs
