[package]
name = "searchfox-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "searchfox-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
scraper = "0.19"
env_logger = "0.11"
log = "0.4"
