[package]
name = "searchfox-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for https://searchfox.org"
license = "MIT OR Apache-2.0"

[[bin]]
name = "searchfox-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1.11"
scraper = "0.23"
env_logger = "0.11"
log = "0.4"
