[workspace]
members = ["searchfox-lib", "searchfox-cli", "searchfox-py"]
default-members = ["searchfox-lib", "searchfox-cli"]
resolver = "2"

[workspace.package]
version = "0.10.8"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1.11"
scraper = "0.23"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
pyo3 = "0.22"
tabled = "0.17"
terminal_size = "0.4"
