[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "searchfox"
version = "0.10.8"
description = "Python bindings for searchfox.org API"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
python-source = "python"
module-name = "searchfox"
bindings = "pyo3"
manifest-path = "searchfox-py/Cargo.toml"
