[package]
name = "searchfox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for https://searchfox.org"

[[bin]]
name = "searchfox-cli"
path = "src/main.rs"

[dependencies]
searchfox-lib = { path = "../searchfox-lib" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }