[package]
name = "searchfox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for https://searchfox.org"
repository = "https://github.com/padenot/searchfox-cli"
homepage = "https://github.com/padenot/searchfox-cli"

[[bin]]
name = "searchfox-cli"
path = "src/main.rs"

[dependencies]
searchfox-lib = { version = "0.4.0", path = "../searchfox-lib" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = "0.8"
dirs = "5.0"
